syntax = "proto3";
package greet_pb;
option go_package="models/greet_pb";

message GreetRequest {
    string name = 1;
}

message GreetResponse {
    string greeting = 1;
}

service GreetService {
    rpc Greet (GreetRequest) returns (GreetResponse) {};
}